# eXtrema

./: .gitignore  .mailmap  AUTHORS  AUTHORS.md  ChangeLog  ExGlobals.cpp  ExGlobals.h  INSTALL  MODIFIED  Makefile.am  Makefile.in  NEWS  ProjectHeader.h  README  README.md  THANKS  TODO.md  TextBuffer.cpp  acinclude.m4  acinclude.m4.save  aclocal.m4  config.status  configure  configure.ac  demo.txt  eXtrema.lnk  extrema.bat  extrema.bpr  extrema.cpp  extrema.desktop  extrema.desktop.patch  extrema.hhp.cached  extrema.lang  extrema.res  extrema.sh  extrema.spec  extrema_icons.tar.bz2  libtool  makeAppImage.sh  makeZipBinary.sh  (+5 more)
Commands/: CMD_alias.cpp  CMD_alias.h  CMD_bestfit.cpp  CMD_bestfit.h  CMD_bin.cpp  CMD_bin.h  CMD_bin2d.cpp  CMD_bin2d.h  CMD_clear.cpp  CMD_clear.h  CMD_contour.cpp  CMD_contour.h  CMD_dealias.cpp  CMD_dealias.h  CMD_defaults.cpp  CMD_defaults.h  CMD_define.cpp  CMD_define.h  CMD_density.cpp  CMD_density.h  CMD_destroy.cpp  CMD_destroy.h  CMD_display.cpp  CMD_display.h  CMD_do.cpp  CMD_do.h  CMD_ellipse.cpp  CMD_ellipse.h  CMD_enddo.cpp  CMD_enddo.h  CMD_endif.cpp  CMD_endif.h  CMD_evaluateExpression.cpp  CMD_evaluateExpression.h  CMD_execute.cpp  CMD_execute.h  CMD_figure.cpp  CMD_figure.h  CMD_filter.cpp  CMD_filter.h  (+83 more)
Expression/: BndChk.h  EExpressionError.h  ExprCodes.cpp  ExprCodes.h  Expression.cpp  Expression.h  ListVector.cpp  ListVector.h  RangeVector.h  Workspace.cpp  Workspace.h
Forms/: About.cpp  About.dfm  About.h  ArrowChooser.cpp  ArrowChooser.dfm  ArrowChooser.h  AxisPopup.cpp  AxisPopup.dfm  AxisPopup.h  BasicColors.cpp  BasicColors.dfm  BasicColors.h  CurvePopup.cpp  CurvePopup.dfm  CurvePopup.h  DensityPlotGui.cpp  DensityPlotGui.dfm  DensityPlotGui.h  DigitizeInfo.cpp  DigitizeInfo.dfm  DigitizeInfo.h  DigitizePNG.cpp  DigitizePNG.dfm  DigitizePNG.h  Display.cpp  Display.dfm  Display.h  DrawFigures.cpp  DrawFigures.dfm  DrawFigures.h  ExecuteForm.cpp  (+114 more)
src/: Makefile.am  extrema.cpp  extrema.h  extrema_res.rc
src/Commands/: CMD_alias.cpp  CMD_alias.h  CMD_bestfit.cpp  CMD_bestfit.h  CMD_bin.cpp  CMD_bin.h  CMD_bin2d.cpp  CMD_bin2d.h  CMD_clear.cpp  CMD_clear.h  CMD_contour.cpp  CMD_contour.h  CMD_dealias.cpp  CMD_dealias.h  CMD_defaults.cpp  CMD_defaults.h  CMD_define.cpp  CMD_define.h  CMD_density.cpp  CMD_density.h  CMD_destroy.cpp  CMD_destroy.h  CMD_display.cpp  CMD_display.h  CMD_do.cpp  CMD_do.h  CMD_ellipse.cpp  CMD_ellipse.cpp~  CMD_ellipse.h  CMD_ellipse.h~  CMD_enddo.cpp  CMD_enddo.h  CMD_endif.cpp  CMD_endif.h  CMD_evaluateExpression.cpp  CMD_evaluateExpression.h  CMD_execute.cpp  CMD_execute.h  CMD_figure.cpp  CMD_figure.h  (+87 more)
src/Expression/: BndChk.h  EExpressionError.h  ExprCodes.cpp  ExprCodes.h  Expression.cpp  Expression.h  ListVector.cpp  ListVector.h  Makefile.am  RangeVector.h  Workspace.cpp  Workspace.h
src/Functions/: ArrayFunction.h  FCN_abs.cpp  FCN_abs.h  FCN_acos.cpp  FCN_acos.h  FCN_acosd.cpp  FCN_acosd.h  FCN_acosh.cpp  FCN_acosh.cpp~  FCN_acosh.h  FCN_acosh.h~  FCN_acot.cpp  FCN_acot.h  FCN_acotd.cpp  FCN_acotd.h  FCN_acoth.cpp  FCN_acoth.cpp~  FCN_acoth.h  FCN_acoth.h~  FCN_acsc.cpp  FCN_acsc.h  FCN_acscd.cpp  FCN_acscd.h  FCN_acsch.cpp  FCN_acsch.cpp~  FCN_acsch.h  FCN_acsch.h~  FCN_adev.cpp  FCN_adev.h  FCN_aerf.cpp  FCN_aerf.h  FCN_aerfc.cpp  FCN_aerfc.h  FCN_agauss.cpp  FCN_agauss.h  FCN_airy.cpp  FCN_airy.h  FCN_area.cpp  FCN_area.h  FCN_asec.cpp  (+406 more)
src/Graphics/: EGraphicsError.h  GRA_angleCharacteristic.cpp  GRA_angleCharacteristic.h  GRA_arrow1.cpp  GRA_arrow1.h  GRA_arrow2.cpp  GRA_arrow2.h  GRA_arrow3.cpp  GRA_arrow3.h  GRA_asterisk.cpp  GRA_axis.cpp  GRA_axis.h  GRA_bitmap.cpp  GRA_bitmap.h  GRA_boolCharacteristic.cpp  GRA_boolCharacteristic.h  GRA_boxPlot.cpp  GRA_boxPlot.h  GRA_cartesianAxes.cpp  GRA_cartesianAxes.h  GRA_cartesianCurve.cpp  GRA_cartesianCurve.h  GRA_characteristic.h  GRA_color.cpp  GRA_color.h  GRA_colorCharacteristic.cpp  GRA_colorCharacteristic.h  GRA_colorControl.cpp  GRA_colorControl.h  GRA_colorMap.cpp  GRA_colorMap.h  GRA_contour.cpp  GRA_contour.h  GRA_contourLine.cpp  GRA_contourLine.h  GRA_cross.cpp  GRA_cross.h  GRA_crossPlus.cpp  GRA_densityPlot.cpp  GRA_densityPlot.h  (+80 more)
src/Operators/: ArrayOperator.h  Makefile.am  OPR_and.cpp  OPR_and.h  OPR_concatenation.cpp  OPR_concatenation.h  OPR_divide.cpp  OPR_divide.h  OPR_equals.cpp  OPR_equals.h  OPR_exclusiveOr.cpp  OPR_exclusiveOr.h  OPR_exponentiation.cpp  OPR_exponentiation.h  OPR_exponentiation2.cpp  OPR_exponentiation2.h  OPR_ge.cpp  OPR_ge.h  OPR_gt.cpp  OPR_gt.h  OPR_innerProduct.cpp  OPR_innerProduct.h  OPR_intersection.cpp  OPR_intersection.h  OPR_le.cpp  OPR_le.h  OPR_lt.cpp  OPR_lt.h  OPR_minus.cpp  OPR_minus.h  OPR_multiply.cpp  OPR_multiply.h  OPR_ne.cpp  OPR_ne.h  OPR_not.cpp  OPR_not.h  OPR_or.cpp  OPR_or.h  OPR_outerProduct.cpp  OPR_outerProduct.h  (+14 more)
src/Parsing/: ESyntaxError.h  Makefile.am  ParseLine.cpp  ParseLine.h  ParseToken.cpp  ParseToken.h  Script.cpp  Script.h
src/Utilities/: ExGlobals.cpp  ExGlobals.h  ExXML.cpp  ExXML.h  Makefile.am  ToAscii.h  UsefulFunctions.cpp  UsefulFunctions.h
src/Variables/: EVariableError.h  Makefile.am  NVariableTable.cpp  NVariableTable.h  NumericData.cpp  NumericData.h  NumericVariable.cpp  NumericVariable.h  TVariableTable.cpp  TVariableTable.h  TextData.cpp  TextData.h  TextVariable.cpp  TextVariable.h  Variable.cpp  Variable.h
src/wxForms/: AnalysisCommandPanel.cpp  AnalysisCommandPanel.h  AnalysisMessagePanel.cpp  AnalysisMessagePanel.h  AnalysisSpeedButtonPanel.cpp  AnalysisSpeedButtonPanel.h  AnalysisWindow.cpp  AnalysisWindow.h  AxisPopup.cpp  AxisPopup.h  BasicColors.cpp  BasicColors.h  ChooseFilePanel.cpp  ChooseFilePanel.h  ColorSelector.cpp  ColorSelector.h  CommandTextCtrl.cpp  CommandTextCtrl.h  CurvePopup.cpp  CurvePopup.h  ExColorCtrl.cpp  ExColorCtrl.h  ExSlider.h  ExSpinCtrlD.cpp  ExSpinCtrlD.h  ExSpinCtrlI.cpp  ExSpinCtrlI.h  ExecuteDialog.cpp  ExecuteDialog.h  FigureForm.cpp  FigureForm.h  FitForm.cpp  FitForm.h  FontChooser.cpp  FontChooser.h  GenerateVectorForm.cpp  GenerateVectorForm.h  GraphForm.cpp  GraphForm.h  GraphicsPage.cpp  (+52 more)
(+2127 files in other folders)
