# Copyright (C) 2007 Joseph L. Chuma <chuma@triumf.ca>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = reconf configure extrema.spec extrema.desktop extrema_icons.tar.bz2 ./Images ./Help ./Scripts ./doc ./src/wxForms/ExColorCtrl.h ./src/wxForms/ExSpinCtrlD.h ./src/wxForms/ExSpinCtrlI.h ./src/wxForms/ExSlider.h

# list immediate subdirectories only
SUBDIRS = src

myimagesdir = $(datadir)/extrema/Images
myimages_DATA = ./Images/*.GIF

myhelpdir = $(datadir)/extrema/Help
myhelp_DATA = ./Help/extrema.hhc ./Help/extrema.hhk ./Help/extrema.hhp
myhtmldir = $(myhelpdir)/html
myhtml_DATA = ./Help/html/*.gif ./Help/html/*.htm

myaliascommanddir = $(myhelpdir)/html/AliasCommand
myaliascommand_DATA = ./Help/html/AliasCommand/*.htm

mybasictasksdir = $(myhelpdir)/html/BasicTasks
mybasictasks_DATA = ./Help/html/BasicTasks/*.gif ./Help/html/BasicTasks/*.htm

mybestfitcommanddir = $(myhelpdir)/html/BestfitCommand
mybestfitcommand_DATA = ./Help/html/BestfitCommand/*.htm

mybin2dcommanddir = $(myhelpdir)/html/Bin2DCommand
mybin2dcommand_DATA = ./Help/html/Bin2DCommand/*.htm

mybincommanddir = $(myhelpdir)/html/BinCommand
mybincommand_DATA = ./Help/html/BinCommand/*.htm

myclearcommanddir = $(myhelpdir)/html/ClearCommand
myclearcommand_DATA = ./Help/html/ClearCommand/*.htm

mycontourcommanddir = $(myhelpdir)/html/ContourCommand
mycontourcommand_DATA = ./Help/html/ContourCommand/*.gif ./Help/html/ContourCommand/*.htm

mydealiascommanddir = $(myhelpdir)/html/DealiasCommand
mydealiascommand_DATA = ./Help/html/DealiasCommand/*.htm

mydefaultscommanddir = $(myhelpdir)/html/DefaultsCommand
mydefaultscommand_DATA = ./Help/html/DefaultsCommand/*.htm

mydefinecommanddir = $(myhelpdir)/html/DefineCommand
mydefinecommand_DATA = ./Help/html/DefineCommand/*.htm

mydensitycommanddir = $(myhelpdir)/html/DensityCommand
mydensitycommand_DATA = ./Help/html/DensityCommand/*.png  ./Help/html/DensityCommand/*.jpg  ./Help/html/DensityCommand/*.htm

mydestroycommanddir = $(myhelpdir)/html/DestroyCommand
mydestroycommand_DATA = ./Help/html/DestroyCommand/*.htm

mydisplaycommanddir = $(myhelpdir)/html/DisplayCommand
mydisplaycommand_DATA = ./Help/html/DisplayCommand/*.htm  ./Help/html/DisplayCommand/*.jpg

myellipsecommanddir = $(myhelpdir)/html/EllipseCommand
myellipsecommand_DATA = ./Help/html/EllipseCommand/*.htm

myexecutecommanddir = $(myhelpdir)/html/ExecuteCommand
myexecutecommand_DATA = ./Help/html/ExecuteCommand/*.htm

myfigurecommanddir = $(myhelpdir)/html/FigureCommand
myfigurecommand_DATA = ./Help/html/FigureCommand/*.png ./Help/html/FigureCommand/*.htm

myfiltercommanddir = $(myhelpdir)/html/FilterCommand
myfiltercommand_DATA = ./Help/html/FilterCommand/*.gif  ./Help/html/FilterCommand/*.jpg  ./Help/html/FilterCommand/*.htm

myfitcommanddir = $(myhelpdir)/html/FitCommand
myfitcommand_DATA = ./Help/html/FitCommand/*.gif  ./Help/html/FitCommand/*.htm

mygeneratecommanddir = $(myhelpdir)/html/GenerateCommand
mygeneratecommand_DATA = ./Help/html/GenerateCommand/*.htm

mygetcommanddir = $(myhelpdir)/html/GetCommand
mygetcommand_DATA = ./Help/html/GetCommand/*.htm

mygraphcommanddir = $(myhelpdir)/html/GraphCommand
mygraphcommand_DATA = ./Help/html/GraphCommand/*.htm ./Help/html/GraphCommand/*.gif ./Help/html/GraphCommand/*.jpg ./Help/html/GraphCommand/*.png

mygridcommanddir = $(myhelpdir)/html/GridCommand
mygridcommand_DATA = ./Help/html/GridCommand/*.htm

myhardcopycommanddir = $(myhelpdir)/html/HardcopyCommand
myhardcopycommand_DATA = ./Help/html/HardcopyCommand/*.htm

myinquirecommanddir = $(myhelpdir)/html/InquireCommand
myinquirecommand_DATA = ./Help/html/InquireCommand/*.htm ./Help/html/InquireCommand/*.jpg

mylistcommanddir = $(myhelpdir)/html/ListCommand
mylistcommand_DATA = ./Help/html/ListCommand/*.htm

mymatrixcommanddir = $(myhelpdir)/html/MatrixCommand
mymatrixcommand_DATA = ./Help/html/MatrixCommand/*.htm

myminuitcommanddir = $(myhelpdir)/html/MinuitCommand
myminuitcommand_DATA = ./Help/html/MinuitCommand/*.htm

mypagecommanddir = $(myhelpdir)/html/PageCommand
mypagecommand_DATA = ./Help/html/PageCommand/*.htm

mypausecommanddir = $(myhelpdir)/html/PauseCommand
mypausecommand_DATA = ./Help/html/PauseCommand/*.htm

mypolygoncommanddir = $(myhelpdir)/html/PolygonCommand
mypolygoncommand_DATA = ./Help/html/PolygonCommand/*.htm ./Help/html/PolygonCommand/*.png

myquitcommanddir = $(myhelpdir)/html/QuitCommand
myquitcommand_DATA = ./Help/html/QuitCommand/*.htm

myreadcommanddir = $(myhelpdir)/html/ReadCommand
myreadcommand_DATA = ./Help/html/ReadCommand/*.htm
myrcsdir = $(myhelpdir)/html/ReadCommand/Scalars
myrcs_DATA = ./Help/html/ReadCommand/Scalars/*.htm
myrcvdir = $(myhelpdir)/html/ReadCommand/Vectors
myrcv_DATA = ./Help/html/ReadCommand/Vectors/*.htm

myrebincommanddir = $(myhelpdir)/html/RebinCommand
myrebincommand_DATA = ./Help/html/RebinCommand/*.png ./Help/html/RebinCommand/*.htm

myreplotcommanddir = $(myhelpdir)/html/ReplotCommand
myreplotcommand_DATA = ./Help/html/ReplotCommand/*.htm

myrestorecommanddir = $(myhelpdir)/html/RestoreCommand
myrestorecommand_DATA = ./Help/html/RestoreCommand/*.htm

myreturncommanddir = $(myhelpdir)/html/ReturnCommand
myreturncommand_DATA = ./Help/html/ReturnCommand/*.htm

mysavecommanddir = $(myhelpdir)/html/SaveCommand
mysavecommand_DATA = ./Help/html/SaveCommand/*.htm

myscalarcommanddir = $(myhelpdir)/html/ScalarCommand
myscalarcommand_DATA = ./Help/html/ScalarCommand/*.htm

myscalescommanddir = $(myhelpdir)/html/ScalesCommand
myscalescommand_DATA = ./Help/html/ScalesCommand/*.gif ./Help/html/ScalesCommand/*.htm

mysetcommanddir = $(myhelpdir)/html/SetCommand
mysetcommand_DATA = ./Help/html/SetCommand/*.htm

myshowcommanddir = $(myhelpdir)/html/ShowCommand
myshowcommand_DATA = ./Help/html/ShowCommand/*.htm

mysortcommanddir = $(myhelpdir)/html/SortCommand
mysortcommand_DATA = ./Help/html/SortCommand/*.htm

mystackcommanddir = $(myhelpdir)/html/StackCommand
mystackcommand_DATA = ./Help/html/StackCommand/*.htm

mystatisticscommanddir = $(myhelpdir)/html/StatisticsCommand
mystatisticscommand_DATA = ./Help/html/StatisticsCommand/*.gif ./Help/html/StatisticsCommand/*.png ./Help/html/StatisticsCommand/*.htm

mytextcommanddir = $(myhelpdir)/html/TextCommand
mytextcommand_DATA = ./Help/html/TextCommand/*.png ./Help/html/TextCommand/*.htm

myvectorcommanddir = $(myhelpdir)/html/VectorCommand
myvectorcommand_DATA = ./Help/html/VectorCommand/*.htm

mywindowcommanddir = $(myhelpdir)/html/WindowCommand
mywindowcommand_DATA = ./Help/html/WindowCommand/*.htm

myworldcommanddir = $(myhelpdir)/html/WorldCommand
myworldcommand_DATA = ./Help/html/WorldCommand/*.htm

mywritecommanddir = $(myhelpdir)/html/WriteCommand
mywritecommand_DATA = ./Help/html/WriteCommand/*.htm

myzerolinescommanddir = $(myhelpdir)/html/ZerolinesCommand
myzerolinescommand_DATA = ./Help/html/ZerolinesCommand/*.png ./Help/html/ZerolinesCommand/*.htm

mycharacteristicsdir = $(myhelpdir)/html/Characteristics
mycharacteristics_DATA = ./Help/html/Characteristics/*.htm
mycfrdir = $(myhelpdir)/html/Characteristics/FileRelated
mycfr_DATA = ./Help/html/Characteristics/FileRelated/*.htm
mycggdir = $(myhelpdir)/html/Characteristics/GeneralGraph
mycgg_DATA = ./Help/html/Characteristics/GeneralGraph/*.htm ./Help/html/Characteristics/GeneralGraph/*.jpg ./Help/html/Characteristics/GeneralGraph/*.png
mycggafcdir = $(myhelpdir)/html/Characteristics/GeneralGraph/areafillcolor
mycggafc_DATA = ./Help/html/Characteristics/GeneralGraph/areafillcolor/*.htm ./Help/html/Characteristics/GeneralGraph/areafillcolor/*.jpg
mycggtdir = $(myhelpdir)/html/Characteristics/GeneralGraph/tension
mycggt_DATA = ./Help/html/Characteristics/GeneralGraph/tension/*.htm ./Help/html/Characteristics/GeneralGraph/tension/*.png ./Help/html/Characteristics/GeneralGraph/tension/*.gif
mycgldir = $(myhelpdir)/html/Characteristics/GraphLegend
mycgl_DATA = ./Help/html/Characteristics/GraphLegend/*.htm ./Help/html/Characteristics/GraphLegend/*.png
mycpsdir = $(myhelpdir)/html/Characteristics/PlottingSymbol
mycps_DATA = ./Help/html/Characteristics/PlottingSymbol/*.htm ./Help/html/Characteristics/PlottingSymbol/*.png
myctrdir = $(myhelpdir)/html/Characteristics/TextRelated
myctr_DATA = ./Help/html/Characteristics/TextRelated/*.htm
mycxadir = $(myhelpdir)/html/Characteristics/Xaxis
mycxa_DATA = ./Help/html/Characteristics/Xaxis/*.htm
mycyadir = $(myhelpdir)/html/Characteristics/Yaxis
mycya_DATA = ./Help/html/Characteristics/Yaxis/*.htm
mycpadir = $(myhelpdir)/html/Characteristics/Polar
mycpa_DATA = ./Help/html/Characteristics/Polar/*.htm ./Help/html/Characteristics/Polar/*.png

myintrodir = $(myhelpdir)/html/Introduction
myintro_DATA = ./Help/html/Introduction/*.htm ./Help/html/Introduction/*.gif

mylicensedir = $(myhelpdir)/html/License
mylicense_DATA = ./Help/html/License/*.htm

myoperatorsdir = $(myhelpdir)/html/Operators
myoperators_DATA = ./Help/html/Operators/*.htm

myfunctionsdir = $(myhelpdir)/html/Functions
myfunctions_DATA = ./Help/html/Functions/*.htm
myfnadir = $(myhelpdir)/html/Functions/NumericAnalysis
myfna_DATA = ./Help/html/Functions/NumericAnalysis/*.htm
myfnaairydir = $(myhelpdir)/html/Functions/NumericAnalysis/Airy
myfnaairy_DATA = ./Help/html/Functions/NumericAnalysis/Airy/*.htm ./Help/html/Functions/NumericAnalysis/Airy/*.png
myfnaareadir = $(myhelpdir)/html/Functions/NumericAnalysis/Area
myfnaarea_DATA = ./Help/html/Functions/NumericAnalysis/Area/*.htm ./Help/html/Functions/NumericAnalysis/Area/*.png
myfnabesseldir = $(myhelpdir)/html/Functions/NumericAnalysis/Bessel
myfnabessel_DATA = ./Help/html/Functions/NumericAnalysis/Bessel/*.htm ./Help/html/Functions/NumericAnalysis/Bessel/*.gif
myfnabetadir = $(myhelpdir)/html/Functions/NumericAnalysis/Beta
myfnabeta_DATA = ./Help/html/Functions/NumericAnalysis/Beta/*.htm ./Help/html/Functions/NumericAnalysis/Beta/*.gif
myfnachebydir = $(myhelpdir)/html/Functions/NumericAnalysis/Cheby
myfnacheby_DATA = ./Help/html/Functions/NumericAnalysis/Cheby/*.htm ./Help/html/Functions/NumericAnalysis/Cheby/*.png
myfnaconvdir = $(myhelpdir)/html/Functions/NumericAnalysis/Convolute
myfnaconv_DATA = ./Help/html/Functions/NumericAnalysis/Convolute/*.htm ./Help/html/Functions/NumericAnalysis/Convolute/*.png
myfnacosintdir = $(myhelpdir)/html/Functions/NumericAnalysis/Cosint
myfnacosint_DATA = ./Help/html/Functions/NumericAnalysis/Cosint/*.htm ./Help/html/Functions/NumericAnalysis/Cosint/*.png
myfnadawsondir = $(myhelpdir)/html/Functions/NumericAnalysis/Dawson
myfnadawson_DATA = ./Help/html/Functions/NumericAnalysis/Dawson/*.htm ./Help/html/Functions/NumericAnalysis/Dawson/*.png
myfnadeconvdir = $(myhelpdir)/html/Functions/NumericAnalysis/Deconvolute
myfnadeconv_DATA = ./Help/html/Functions/NumericAnalysis/Deconvolute/*.htm
myfnaderivdir = $(myhelpdir)/html/Functions/NumericAnalysis/Deriv
myfnaderiv_DATA = ./Help/html/Functions/NumericAnalysis/Deriv/*.htm ./Help/html/Functions/NumericAnalysis/Deriv/*.png
myfnadetdir = $(myhelpdir)/html/Functions/NumericAnalysis/Det
myfnadet_DATA = ./Help/html/Functions/NumericAnalysis/Det/*.htm
myfnadilogdir = $(myhelpdir)/html/Functions/NumericAnalysis/Dilog
myfnadilog_DATA = ./Help/html/Functions/NumericAnalysis/Dilog/*.htm ./Help/html/Functions/NumericAnalysis/Dilog/*.png
myfnaeigendir = $(myhelpdir)/html/Functions/NumericAnalysis/Eigen
myfnaeigen_DATA = ./Help/html/Functions/NumericAnalysis/Eigen/*.htm
myfnaellintdir = $(myhelpdir)/html/Functions/NumericAnalysis/EllipticIntegrals
myfnaellint_DATA = ./Help/html/Functions/NumericAnalysis/EllipticIntegrals/*.htm ./Help/html/Functions/NumericAnalysis/EllipticIntegrals/*.png
myfnaexpdir = $(myhelpdir)/html/Functions/NumericAnalysis/ExponentialIntegral
myfnaexp_DATA = ./Help/html/Functions/NumericAnalysis/ExponentialIntegral/*.htm ./Help/html/Functions/NumericAnalysis/ExponentialIntegral/*.png
myfnafddir = $(myhelpdir)/html/Functions/NumericAnalysis/FermiDirac
myfnafd_DATA = ./Help/html/Functions/NumericAnalysis/FermiDirac/*.htm ./Help/html/Functions/NumericAnalysis/FermiDirac/*.png
myfnafftdir = $(myhelpdir)/html/Functions/NumericAnalysis/Fft
myfnafft_DATA = ./Help/html/Functions/NumericAnalysis/Fft/*.htm ./Help/html/Functions/NumericAnalysis/Fft/*.png ./Help/html/Functions/NumericAnalysis/Fft/*.jpg
myfnafresneldir = $(myhelpdir)/html/Functions/NumericAnalysis/Fresnel
myfnafresnel_DATA = ./Help/html/Functions/NumericAnalysis/Fresnel/*.htm ./Help/html/Functions/NumericAnalysis/Fresnel/*.png
myfnagammadir = $(myhelpdir)/html/Functions/NumericAnalysis/Gamma
myfnagamma_DATA = ./Help/html/Functions/NumericAnalysis/Gamma/*.htm ./Help/html/Functions/NumericAnalysis/Gamma/*.png
myfnagaussjdir = $(myhelpdir)/html/Functions/NumericAnalysis/Gaussj
myfnagaussj_DATA = ./Help/html/Functions/NumericAnalysis/Gaussj/*.htm ./Help/html/Functions/NumericAnalysis/Gaussj/*.png
myfnahermitedir = $(myhelpdir)/html/Functions/NumericAnalysis/Hermite
myfnahermite_DATA = ./Help/html/Functions/NumericAnalysis/Hermite/*.htm ./Help/html/Functions/NumericAnalysis/Hermite/*.png
myfnahyperdir = $(myhelpdir)/html/Functions/NumericAnalysis/Hypergeometric
myfnahyper_DATA = ./Help/html/Functions/NumericAnalysis/Hypergeometric/*.htm ./Help/html/Functions/NumericAnalysis/Hypergeometric/*.png
myfnaiddir = $(myhelpdir)/html/Functions/NumericAnalysis/Identity
myfnaid_DATA = ./Help/html/Functions/NumericAnalysis/Identity/*.htm ./Help/html/Functions/NumericAnalysis/Identity/*.png
myfnaifftdir = $(myhelpdir)/html/Functions/NumericAnalysis/Ifft
myfnaifft_DATA = ./Help/html/Functions/NumericAnalysis/Ifft/*.htm
myfnaintdir = $(myhelpdir)/html/Functions/NumericAnalysis/Integral
myfnaint_DATA = ./Help/html/Functions/NumericAnalysis/Integral/*.htm ./Help/html/Functions/NumericAnalysis/Integral/*.png
myfnainterpdir = $(myhelpdir)/html/Functions/NumericAnalysis/Interpolate
myfnainterp_DATA = ./Help/html/Functions/NumericAnalysis/Interpolate/*.htm
myfnainversedir = $(myhelpdir)/html/Functions/NumericAnalysis/Inverse
myfnainverse_DATA = ./Help/html/Functions/NumericAnalysis/Inverse/*.htm ./Help/html/Functions/NumericAnalysis/Inverse/*.png
myfnajacobidir = $(myhelpdir)/html/Functions/NumericAnalysis/Jacobi
myfnajacobi_DATA = ./Help/html/Functions/NumericAnalysis/Jacobi/*.htm ./Help/html/Functions/NumericAnalysis/Jacobi/*.png
myfnajoindir = $(myhelpdir)/html/Functions/NumericAnalysis/Join
myfnajoin_DATA = ./Help/html/Functions/NumericAnalysis/Join/*.htm
myfnakelvindir = $(myhelpdir)/html/Functions/NumericAnalysis/Kelvin
myfnakelvin_DATA = ./Help/html/Functions/NumericAnalysis/Kelvin/*.htm ./Help/html/Functions/NumericAnalysis/Kelvin/*.png
myfnalagdir = $(myhelpdir)/html/Functions/NumericAnalysis/Laguerre
myfnalag_DATA = ./Help/html/Functions/NumericAnalysis/Laguerre/*.htm ./Help/html/Functions/NumericAnalysis/Laguerre/*.png
myfnalegdir = $(myhelpdir)/html/Functions/NumericAnalysis/Legendre
myfnaleg_DATA = ./Help/html/Functions/NumericAnalysis/Legendre/*.htm ./Help/html/Functions/NumericAnalysis/Legendre/*.png
myfnapfdir = $(myhelpdir)/html/Functions/NumericAnalysis/Pfactors
myfnapf_DATA = ./Help/html/Functions/NumericAnalysis/Pfactors/*.htm
myfnapcdir = $(myhelpdir)/html/Functions/NumericAnalysis/PoissonCharlier
myfnapc_DATA = ./Help/html/Functions/NumericAnalysis/PoissonCharlier/*.htm ./Help/html/Functions/NumericAnalysis/PoissonCharlier/*.png
myfnapsidir = $(myhelpdir)/html/Functions/NumericAnalysis/Psi
myfnapsi_DATA = ./Help/html/Functions/NumericAnalysis/Psi/*.htm ./Help/html/Functions/NumericAnalysis/Psi/*.gif
myfnaraddir = $(myhelpdir)/html/Functions/NumericAnalysis/Rademacher
myfnarad_DATA = ./Help/html/Functions/NumericAnalysis/Rademacher/*.htm ./Help/html/Functions/NumericAnalysis/Rademacher/*.png
myfnasavgoldir = $(myhelpdir)/html/Functions/NumericAnalysis/Savgol
myfnasavgol_DATA = ./Help/html/Functions/NumericAnalysis/Savgol/*.htm ./Help/html/Functions/NumericAnalysis/Savgol/*.png
myfnasinintdir = $(myhelpdir)/html/Functions/NumericAnalysis/Sinint
myfnasinint_DATA = ./Help/html/Functions/NumericAnalysis/Sinint/*.htm ./Help/html/Functions/NumericAnalysis/Sinint/*.png
myfnasmoothdir = $(myhelpdir)/html/Functions/NumericAnalysis/Smooth
myfnasmooth_DATA = ./Help/html/Functions/NumericAnalysis/Smooth/*.htm ./Help/html/Functions/NumericAnalysis/Smooth/*.png
myfnastruvedir = $(myhelpdir)/html/Functions/NumericAnalysis/Struve
myfnastruve_DATA = ./Help/html/Functions/NumericAnalysis/Struve/*.htm ./Help/html/Functions/NumericAnalysis/Struve/*.png
myfnatinadir = $(myhelpdir)/html/Functions/NumericAnalysis/Tina
myfnatina_DATA = ./Help/html/Functions/NumericAnalysis/Tina/*.htm ./Help/html/Functions/NumericAnalysis/Tina/*.png
myfnavcdir = $(myhelpdir)/html/Functions/NumericAnalysis/VectorCoupling
myfnavc_DATA = ./Help/html/Functions/NumericAnalysis/VectorCoupling/*.htm ./Help/html/Functions/NumericAnalysis/VectorCoupling/*.png
myfnavoigtdir = $(myhelpdir)/html/Functions/NumericAnalysis/Voigt
myfnavoigt_DATA = ./Help/html/Functions/NumericAnalysis/Voigt/*.htm ./Help/html/Functions/NumericAnalysis/Voigt/*.png
myfnavoldir = $(myhelpdir)/html/Functions/NumericAnalysis/Volume
myfnavol_DATA = ./Help/html/Functions/NumericAnalysis/Volume/*.htm
myfnawalshdir = $(myhelpdir)/html/Functions/NumericAnalysis/Walsh
myfnawalsh_DATA = ./Help/html/Functions/NumericAnalysis/Walsh/*.htm ./Help/html/Functions/NumericAnalysis/Walsh/*.png

myfscdir = $(myhelpdir)/html/Functions/ShapeChanging
myfsc_DATA = ./Help/html/Functions/ShapeChanging/*.htm

myfsmdir = $(myhelpdir)/html/Functions/StringManipulation
myfsm_DATA = ./Help/html/Functions/StringManipulation/*.htm

myftrigdir = $(myhelpdir)/html/Functions/TrigAndOtherBasic
myftrig_DATA = ./Help/html/Functions/TrigAndOtherBasic/*.htm

myfvcdir = $(myhelpdir)/html/Functions/VariableCharacteristics
myfvc_DATA = ./Help/html/Functions/VariableCharacteristics/*.htm
myfvcwheredir = $(myhelpdir)/html/Functions/VariableCharacteristics/Where
myfvcwhere_DATA = ./Help/html/Functions/VariableCharacteristics/Where/*.htm ./Help/html/Functions/VariableCharacteristics/Where/*.png

myfspdir = $(myhelpdir)/html/Functions/StatisticsProbability
myfsp_DATA = ./Help/html/Functions/StatisticsProbability/*.htm ./Help/html/Functions/StatisticsProbability/*.gif
myfspadevdir = $(myhelpdir)/html/Functions/StatisticsProbability/Adev
myfspadev_DATA = ./Help/html/Functions/StatisticsProbability/Adev/*.htm
myfspbinomdir = $(myhelpdir)/html/Functions/StatisticsProbability/Binomial
myfspbinom_DATA = ./Help/html/Functions/StatisticsProbability/Binomial/*.htm ./Help/html/Functions/StatisticsProbability/Binomial/*.png
myfspbivdir = $(myhelpdir)/html/Functions/StatisticsProbability/Bivarnor
myfspbiv_DATA = ./Help/html/Functions/StatisticsProbability/Bivarnor/*.htm ./Help/html/Functions/StatisticsProbability/Bivarnor/*.png
myfspchisqdir = $(myhelpdir)/html/Functions/StatisticsProbability/Chisq
myfspchisq_DATA = ./Help/html/Functions/StatisticsProbability/Chisq/*.htm ./Help/html/Functions/StatisticsProbability/Chisq/*.png
myfsperrdir = $(myhelpdir)/html/Functions/StatisticsProbability/ErrorFunction
myfsperr_DATA = ./Help/html/Functions/StatisticsProbability/ErrorFunction/*.htm ./Help/html/Functions/StatisticsProbability/ErrorFunction/*.png
myfspfisherdir = $(myhelpdir)/html/Functions/StatisticsProbability/Fisher
myfspfisher_DATA = ./Help/html/Functions/StatisticsProbability/Fisher/*.htm ./Help/html/Functions/StatisticsProbability/Fisher/*.png
myfspgaussdir = $(myhelpdir)/html/Functions/StatisticsProbability/Gauss
myfspgauss_DATA = ./Help/html/Functions/StatisticsProbability/Gauss/*.htm ./Help/html/Functions/StatisticsProbability/Gauss/*.png
myfspgmeandir = $(myhelpdir)/html/Functions/StatisticsProbability/Gmean
myfspgmean_DATA = ./Help/html/Functions/StatisticsProbability/Gmean/*.htm
myfspimaxdir = $(myhelpdir)/html/Functions/StatisticsProbability/Imax
myfspimax_DATA = ./Help/html/Functions/StatisticsProbability/Imax/*.htm
myfspimindir = $(myhelpdir)/html/Functions/StatisticsProbability/Imin
myfspimin_DATA = ./Help/html/Functions/StatisticsProbability/Imin/*.htm
myfspkurtdir = $(myhelpdir)/html/Functions/StatisticsProbability/Kurt
myfspkurt_DATA = ./Help/html/Functions/StatisticsProbability/Kurt/*.htm
myfspmaxdir = $(myhelpdir)/html/Functions/StatisticsProbability/Max
myfspmax_DATA = ./Help/html/Functions/StatisticsProbability/Max/*.htm
myfspmeandir = $(myhelpdir)/html/Functions/StatisticsProbability/Mean
myfspmean_DATA = ./Help/html/Functions/StatisticsProbability/Mean/*.htm
myfspmediandir = $(myhelpdir)/html/Functions/StatisticsProbability/Median
myfspmedian_DATA = ./Help/html/Functions/StatisticsProbability/Median/*.htm
myfspmindir = $(myhelpdir)/html/Functions/StatisticsProbability/Min
myfspmin_DATA = ./Help/html/Functions/StatisticsProbability/Min/*.htm
myfsppoisdir = $(myhelpdir)/html/Functions/StatisticsProbability/Poisson
myfsppois_DATA = ./Help/html/Functions/StatisticsProbability/Poisson/*.htm
myfspproddir = $(myhelpdir)/html/Functions/StatisticsProbability/Prod
myfspprod_DATA = ./Help/html/Functions/StatisticsProbability/Prod/*.htm
myfsprmsdir = $(myhelpdir)/html/Functions/StatisticsProbability/Rms
myfsprms_DATA = ./Help/html/Functions/StatisticsProbability/Rms/*.htm
myfsprproddir = $(myhelpdir)/html/Functions/StatisticsProbability/Rprod
myfsprprod_DATA = ./Help/html/Functions/StatisticsProbability/Rprod/*.htm
myfsprsumdir = $(myhelpdir)/html/Functions/StatisticsProbability/Rsum
myfsprsum_DATA = ./Help/html/Functions/StatisticsProbability/Rsum/*.htm
myfspskewdir = $(myhelpdir)/html/Functions/StatisticsProbability/Skew
myfspskew_DATA = ./Help/html/Functions/StatisticsProbability/Skew/*.htm
myfspstdevdir = $(myhelpdir)/html/Functions/StatisticsProbability/Stdev
myfspstdev_DATA = ./Help/html/Functions/StatisticsProbability/Stdev/*.htm
myfspstuddir = $(myhelpdir)/html/Functions/StatisticsProbability/Student
myfspstud_DATA = ./Help/html/Functions/StatisticsProbability/Student/*.htm ./Help/html/Functions/StatisticsProbability/Student/*.png
myfspsumdir = $(myhelpdir)/html/Functions/StatisticsProbability/Sum
myfspsum_DATA = ./Help/html/Functions/StatisticsProbability/Sum/*.htm
myfspvardir = $(myhelpdir)/html/Functions/StatisticsProbability/Var
myfspvar_DATA = ./Help/html/Functions/StatisticsProbability/Var/*.htm
